force-app/main/default/objects/External_Event_Log__e/External_Event_Log__e.object-meta.xml
<CustomObject>
    <description>A lightweight, idempotent signal that an Exclusion/Revocation action needs external processing.

Event Types -
ExclusionApplied
ExclusionRevoked
ExclusionUpdated</description>
    <label>External Event Log</label>
    <pluralLabel>External Event Logs</pluralLabel>
</CustomObject>