force-app/main/default/objects/External_Event_Log__e/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>The Correlation ID will be used to track inbound notifications from the Azure Logic App, enabling identification of the source system that initiated the Platform Event.</description>
    <label>CorrelationId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>