force-app/main/default/objects/External_Event_Log__e/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>OUTBOUND (SF→Azure) | INBOUND (Azure→SF).

OUTBOUND | INBOUND</description>
    <label>Direction</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>