force-app/main/default/objects/External_Event_Log__e/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <description>Logical type (e.g., ExclusionApplied, ExclusionRevoked, STOPCODE, FRS_ACK, IDENTITY_STATUS).

ExclusionApplied | ExclusionRevoked | STOPCODE|FRS_ACK | IDENTITY_STATUS</description>
    <label>Event Type</label>
    <length>48</length>
    <required>true</required>
    <type>Text</type>
</CustomField>