force-app/main/default/objects/External_Event_Log__e/fields/JSON_Payload__c.field-meta.xml
<CustomField>
    <fullName>JSON_Payload__c</fullName>
    <description>Entire payload (JSON string) as per schema; no files or images.</description>
    <label>JSON Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>