force-app/main/default/objects/External_Event_Log__e/fields/PatronId__c.field-meta.xml
<CustomField>
    <fullName>PatronId__c</fullName>
    <description>Canonical external patron Id (MDM).</description>
    <label>Patron Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>