force-app/main/default/objects/External_Event_Log__e/fields/PublishedAt__c.field-meta.xml
<CustomField>
    <fullName>PublishedAt__c</fullName>
    <description>Publish timestamp (UTC).</description>
    <label>Published At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>