force-app/main/default/objects/External_Event_Log__e/fields/SchemaVersion__c.field-meta.xml
<CustomField>
    <fullName>SchemaVersion__c</fullName>
    <description>JSON schema version in Payload__c (e.g., v1).</description>
    <label>Schema Version</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>