force-app/main/default/objects/External_Event_Log__e/fields/siteCode__c.field-meta.xml
<CustomField>
    <fullName>siteCode__c</fullName>
    <description>SYD|BNE|GOL</description>
    <label>Site Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>