force-app/main/default/objects/External_Event_Log__e/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <description>SALESFORCE | SYNKROS | NEOFACE | PINGONE

For INBOUND: `SYNKROS or PINGONE</description>
    <label>Source System</label>
    <length>24</length>
    <required>true</required>
    <type>Text</type>
</CustomField>